Records: fix failing RecordCompilationTests; it uses preview features